# genomedata

./: .gitignore  .hgignore  .readthedocs.yml  CITATION.cff  CONTRIBUTING.rst  LICENSE  MANIFEST.in  NEWS  README  README.rst  TODO  bitbucket-pipeline.ylm  bitbucket-pipelines.yml  environment.yml  ez_setup.py  install.py  install.tmpl  pyproject.toml  setup.cfg  setup.py
.github/workflows/: continuous-integration-build.yml  continuous-integration-test.yml  continuous-integration-workflow.yml  python-publish.yml
Docker/: Dockerfile
contrib/perl-inline-python/: genomedata_random_access.pl
doc/: Makefile  conf.py  genomedata.rst  index.rst  make.bat
examples/: README  genomedata_fill_random.py  genomedata_offline_random_access.py  genomedata_random_access.py  random_genomic_positions.py
genomedata/: __init__.py  _bigwig.py  _chromosome.py  _close_data.py  _erase_data.py  _erase_track.py  _filter_data.py  _filter_data_parsers.py  _hard_mask.py  _hardmask.py  _hardmask_parsers.py  _hdf5.py  _histogram.py  _info.py  _load_data.py  _load_genomedata.py  _load_seq.py  _open_data.py  _query.py  _report.py  _save_metadata.py  _util.py  load_genomedata.py  load_seq.py  name_tracks.py  save_metadata.py
src/: Makefile  _c_load_data.c  _load_data.c  genomedata-load-data.c  genomedata_load_data.c  update_gnulib.sh
src/build-deps/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
src/build-deps/gllib/: Makefile.am  Makefile.in
src/build-deps/glm4/: Makefile.am  Makefile.in
test/: README  run_all.py  run_tests.py  test_genomedata.py  test_main.py
test/data/: ENCFF324BPE.bigWig  chr1.phyloP44way.placental.short.wigFix  chr1.phyloP44way.primate.short.wigFix  chr1.phyloP44way.vertebrate.short.wigFix  chr1.short.fa  chr1.wgEncodeDukeDNaseSeqBaseOverlapSignalK562V2.wig  chrY.short.fa  chunk_test_track1.bed  chunk_test_track2.bed  filter.bed  filter_fixed.wig  phyloP44way.placental.short.wigFix  test_chunks.agp  unfiltered.bed  v0.genomedata  v1.genomedata  wgEncodeDukeDNaseSeqBaseOverlapSignalK562V2.bed  wgEncodeDukeDNaseSeqBaseOverlapSignalK562V2.bedGraph  wgEncodeDukeDNaseSeqBaseOverlapSignalK562V2.dos.bed  wgEncodeDukeDNaseSeqBaseOverlapSignalK562V2.dos.bedGraph  wgEncodeDukeDNaseSeqBaseOverlapSignalK562V2.dos.wigVar  wgEncodeDukeDNaseSeqBaseOverlapSignalK562V2.wigVar
